# Gauth_py

./: CONVERSION_COMPLETE.md  CONVERSION_FINAL_STATUS.md  CONVERSION_MAPPING.md  CONVERSION_SUMMARY.md  CONVERSION_UPDATE_SUMMARY.md  DESIGN_TOKEN_ROTATION.md  DEV_REQUIREMENTS.md  Dockerfile  GAP_ANALYSIS.md  LICENSE  Makefile  README.md  comprehensive_test.py  debug_auth.py  debug_jwt.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  simple_test.py
examples/: README.md  advanced_features.py  basic_usage.py
gauth/: __init__.py
gauth/audit/: __init__.py  logger.py
gauth/auth/: __init__.py  auth.py  basic.py  errors.py  jwt.py  oauth2.py  paseto.py  types.py
gauth/authz/: __init__.py  authz.py  conditions.py  context.py  types.py
gauth/circuit/: __init__.py  circuit.py
gauth/common/: __init__.py  decorators.py  messages.py  utils.py
gauth/core/: __init__.py  config.py  gauth.py  types.py
gauth/demo/: __init__.py  main.py
gauth/errors/: __init__.py
gauth/events/: __init__.py  events.py
gauth/integration/: __init__.py  clients.py  testing.py
gauth/mesh/: __init__.py  mesh.py  registry.py  service.py
gauth/metrics/: __init__.py  collector.py  exporter.py  middleware.py
gauth/monitoring/: __init__.py  health.py  metrics.py  performance.py
gauth/poa/: __init__.py  authorization.py  client.py  errors.py  principal.py  types.py
gauth/rate/: __init__.py  limiter.py  middleware.py  redis_limiter.py
gauth/ratelimit/: __init__.py  limiter.py
gauth/resilience/: __init__.py  circuit.py  patterns.py
gauth/resource/: __init__.py  config.py  manager.py  types.py
gauth/resources/: __init__.py  manager.py  store.py  types.py
gauth/service/: __init__.py
gauth/store/: __init__.py  factory.py  memory.py  types.py
gauth/token/: __init__.py  store.py
gauth_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_all_new_functionality.py  test_enhanced_functionality.py  test_gauth_basic.py  test_new_packages.py
(+13 files in other folders)
